# vidcoin

./: CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libvidcoinconsensus.pc.in
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json  vidcoin.sln  vidcoin_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  valgrind.supp  vidcoin-cli.bash-completion  vidcoin-qt.pro  vidcoin-tx.bash-completion  vidcoind.bash-completion
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  vidcoin-conf.md  zmq.md
doc/man/: Makefile  Makefile.am  Makefile.in  vidcoin-cli.1  vidcoin-qt.1  vidcoin-tx.1  vidcoin-wallet.1  vidcoind.1
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  (+110 more)
(+736 files in other folders)
