dist_man1_MANS=

if BUILD_VIDCOIND
  dist_man1_MANS+=vidcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=vidcoin-qt.1
endif

if BUILD_VIDCOIN_CLI
  dist_man1_MANS+=vidcoin-cli.1
endif

if BUILD_VIDCOIN_TX
  dist_man1_MANS+=vidcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_VIDCOIN_WALLET
  dist_man1_MANS+=vidcoin-wallet.1
endif
endif
